[FIX] Fixed action sizes and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@
     height: 30px;
     width: calc(100% / 4);
     margin: 5px;
+    font-size: 20px;
+    border-radius: 3px;
 }
 
 .bg-orange{
